Allow override of getTopicItems and getSubTopicItems in MessageContentCollector and update LicenseLimitCollector accordingly